--- a/src/App.css
+++ b/src/App.css
@@ -6,13 +6,12 @@
 }
 
 .button-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  display: grid;
+  grid-template-columns: 300px 300px 300px;
 }
 
 .button-container .button {
-  margin: 10px;
+  margin: 5px;
 }
 
 @media (max-width: 768px) {
