--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,18 @@
   text-align: center;
 }
 
+body {
+  margin: 0;
+  display: flex;
+  place-items: center;
+  min-height: 100vh;
+}
+
+h1 {
+  font-size: 3.2em;
+  line-height: 1.1;
+}
+
 .button-container {
   display: grid;
   grid-template-columns: 300px 300px 300px;
